fix: index icon align

--- a/src/web/sass/index.scss
+++ b/src/web/sass/index.scss
@@ -40,11 +40,11 @@
       cursor: pointer;
       img {
         width: 64px;
-        padding-top: 10px;
+        padding-top: 30px;
         margin-bottom: 10px;
       }
       span {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: normal;
         color: black;
       }
